--- a/test/style.css
+++ b/test/style.css
@@ -1,22 +1,20 @@
-ul{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: black;
+table,
+th,
+td {
+  border: 1px solid #e7e7e7;
 }
-li{
-  float: left;
+.project {
+  background-color: #1c1c1c;
+  color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 100vh;
+}
 
-}
-li a{
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-li a:hover {
-    background-color: red;
-
+.color {
+  color: aliceblue;
+  display: flex;
+  flex-direction: row;
 }
